fix spacing

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -25,9 +25,9 @@ body {
 
 .thingies {
   flex: 1 1 20%;
-  min-width: 225px;
+  min-width: 230px;
   text-align: center;
-  margin: 110px auto 0 auto;
+  margin: 170px auto 0 auto;
 }
 
 h1 {
@@ -40,7 +40,7 @@ form {
 
 #pfp {
   position: absolute;
-  top: -230px;
+  top: -220px;
   box-shadow: 0px 0px 18px white;
   border-radius: 50%;
   transition: transform .35s ease-in-out;
@@ -55,7 +55,7 @@ form {
 #bigheader {
   font-size: 3em;
   font-style: italic;
-  margin-top: 35px;
+  margin-top: 110px;
   text-align: center;
   color:white;
   position: absolute;
